src/styles.css
/* You can add global styles to this file, and also import other style files */

/* roboto-regular - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url('assets/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Roboto'), local('Roboto-Regular'),
       url('assets/roboto-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('assets/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('assets/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('assets/roboto-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('assets/roboto-v18-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
}

/* lato-regular - latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: url('assets/lato-v14-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Lato Regular'), local('Lato-Regular'),
       url('assets/lato-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('assets/lato-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('assets/lato-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('assets/lato-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('assets/lato-v14-latin-regular.svg#Lato') format('svg'); /* Legacy iOS */
}

/* sanchez-regular - latin */
@font-face {
  font-family: 'Sanchez';
  font-style: normal;
  font-weight: 400;
  src: url('assets/sanchez-v6-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Sanchez'), local('Sanchez-Regular'),
       url('assets/sanchez-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('assets/sanchez-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('assets/sanchez-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('assets/sanchez-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('assets/sanchez-v6-latin-regular.svg#Sanchez') format('svg'); /* Legacy iOS */
}

html {
  height: 100%;
}

body {
  height: 100%;
  margin: 0%;
}

.verticalCenter {
  position: relative;
  /* display: inline-block; */
  top: 50%;
  transform: translateY(-50%);
}

/* could move back; doesn't vary by orientation */
.gridRow {
  height: 6.667%;
}

/* could move back; doesn't vary by orientation */
.cell {
  height: 100%;
  width: 6.666667%;
}

/* Overrides for bootstrap modals */
body {
  line-height: 16px;
}

      .modal-lg {
        width: 50%;
      }

      .modal-footer {

        /* display: none;   */
      }

      .modal-header {
        display: none;
      }

      .modal-content {
        background: darkcyan;
        color: white;
      }

      body.modal-open {
        font-size: initial;
      }

      .modal-dialog {
        /* top: 40%; */
        font-family: 'Sanchez';
      }

      /* Fade and transition stuff */
      .modal.fade {
        opacity: 0;
        -webkit-transition: none;
        -o-transition: none;
        transition: none;
      }
      body.modal-open .modal.fade.in, .modal-dialog {
        opacity: 1;
         -webkit-transition: none;
        -o-transition: none;
        transition: none;
      }

      body.modal-open .modal[style]:not([style='display: none;']) {
        display: flex !important;
        height: 100%;
    } 
    /* */



    
    body.modal-open .modal[style]:not([style='display: none;']) .modal-dialog {
        margin: auto;
    }

      .modal-body p {
        margin-bottom: 0px;
      }

      .modal-footer {
        text-align: center;

        /* Looks like an <hr> */
        border-top: none;
      }


.btn {
  background-image: none;
  background-color: cyan;
  font-family: 'Sanchez';
  font-weight: bold;
  font-size: inherit;
  color: white;
  border: none;
  border-radius: 10%;
}

.btn-primary {
  background-position: inherit;
}

.btn-secondary {

}



#timerBar {
  height: 7%;
}

#timerBar #pauseButtons {
  height: .1%;
  overflow: hidden;
}

#timerBar img {
}

.glyphicon {
  top: 0px;
}

#actualContainerOfWordGrid {
  height: 93%;
}

.overlay {
  height: 300%;
  width: 300%;
  top: -100px;
  left: -100px;
  position: relative;
  overflow: hidden;
  /* background: orange; */
}

.letter {
  font-family: 'Lato';/* 'Zilla Slab'; */ /* Raleway; */ /*Montserrat*/
  font-weight: bold;
  /* font-size: 150%; */
  /* line-height: 0px; */
  height: 100%;
  width: 100%;
}

.ww-container {
  height: 100%;
  /* padding: .3em; */
}

#wordGridContainer{
  padding: .5% 1% 1% 1%;
  height: 100%;
}

#wordList
{
    /* height: 100%; */
    position: relative;
    overflow: hidden;
    font-size: .85em;
}

.row {
  padding: 1%;
  margin: 0px;
  padding: 0px;
  /* width: auto; */
}

@media only screen and (orientation : landscape)
{
  .wordList {
    -moz-column-count: 3;
    column-count: 3;
    -webkit-column-count: 3;
    -moz-column-gap: 1.5%;
    -webkit-column-gap: 1.5%;
    column-gap: 1.5%;
  }
}

